--- a/package.json
+++ b/package.json
@@ -1,15 +1,28 @@
 {
   "scripts": {
-    "start:dev": "nodemon ./src/index.ts"
+    "start:api": "nodemon ./src/index.ts",
+    "start:app": "parcel serve --port 8080 ./public/index.html"
   },
   "devDependencies": {
+    "@parcel/transformer-sass": "2.8.3",
+    "@types/cors": "^2.8.13",
     "@types/express": "^4.17.17",
+    "@types/node": "^18.13.0",
+    "@types/react": "^18.0.28",
+    "@types/react-dom": "^18.0.11",
+    "@types/react-router-dom": "^5.3.3",
     "nodemon": "^2.0.20",
+    "parcel": "^2.8.3",
+    "process": "^0.11.10",
     "ts-node": "^10.9.1"
   },
   "dependencies": {
     "body-parser": "^1.20.1",
+    "cors": "^2.8.5",
     "express": "^4.18.2",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.8.1",
     "typescript": "^4.9.5"
   }
 }
